tests/ui/error-codes/E0197.stderr
error[E0197]: inherent impls cannot be unsafe
  --> $DIR/E0197.rs:3:13
   |
LL | unsafe impl Foo { }
   | ------      ^^^ inherent impl for this type
   | |
   | unsafe because of this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0197`.
