tests/ui/error-codes/E0197.rs
struct Foo;

unsafe impl Foo { } //~ ERROR E0197

fn main() {
}
